# asciibox

./: .gitignore  Cargo.toml  ChangeLog  PKGBUILD  asciibox.code-workspace  build.rs  build.sh  config.toml  meson.build  readme.md  readme_CN.md  readme_EN.md
data/: asciibox.gresource.xml  asciibox.gschema.xml  asciibox.metainfo.xml.in  com.github.nobodygx.asciibox.desktop.in  com.github.nobodygx.asciibox.gschema.xml  com.github.nobodygx.asciibox.metainfo.xml.in  com.github.nobodygx.asciibox.metainfo.xml.in.in  meson.build
data/aur/: PKGBUILD
data/css/: app.css
data/css/gtk/: style-dark.css  style-light.css  style-sepia.css
data/html/: index.html  origin_index.html  web_index.html
data/icons/: meson.build
data/script/: pkg_build_test.sh  update_translations.sh
data/scripts/: cargo.sh  check_resource.sh  env.sh  extra_mermaid_version.sh  gen_po.sh  gen_po_in.sh  gen_pot.sh  init_hooks.sh  pkg_build_test.sh  push_po.sh  update_po.sh
data/themes/: style.css  theme_selector.css
data/ui/: image_preview_dialog.blp  image_preview_dialog.ui  main_window.blp  main_window.ui  page_adoc.ui  page_asciibox.ui  page_flowchart.blp  page_flowchart.ui  page_mermaid.blp  page_mermaid.ui  page_svgbob.ui  page_table.blp  page_table.ui  preferences.blp  preferences.ui  shortcuts.blp  shortcuts.ui  theme_selector.ui  theme_switcher.blp  theme_switcher.ui  window.ui
po/: POTFILES.in  asciibox.pot  mdock.pot  meson.build  zh_CN.po
src/: application.rs  config.rs  config.rs.in  main.rs  meson.build  utils.rs
src-old/: application.rs  config.rs  meson.build
src-old/core/: mod.rs
src-old/core/flowchart/: meson.build  node.rs  test.rs
src-old/core/mermaid/: theme.rs  theme_manager.rs
src-old/core/table/: table_format.rs
src-old/gui/: main_window.rs  mod.rs  page_mermaid.rs  preference_window.rs
src-old/gui/widget/: image_preview_dialog.rs
src-old/utils/: checker.rs  g_dialog.rs  meson.build  mod.rs
src/core/: meson.build  mod.rs  settings.rs
src/core/adoc/: meson.build  mod.rs  table_format.rs
src/core/asciibox/: ab_cell.rs  ab_grid.rs  ab_map.rs  ab_parse.rs  grid.rs  meson.build  mod.rs  test.rs
src/core/asciibox/ab_graph/: ext.rs  graph.rs  mod.rs  physics.rs  render.rs  style.rs  test.rs
src/core/config/: config.rs
src/core/flowchart/: cell.rs  graph.rs  maps.rs  mod.rs  parse.rs
src/core/mermaid/: mod.rs  theme.rs
src/core/svgbob/: cell.rs  data.rs  graph.rs  gsmap.rs  maps.rs  meson.build  mod.rs  node.rs  parse.rs  test.rs
src/core/table/: mod.rs  table_data.rs  table_format.rs
src/core/utils/: calurator.rs
src/gui/: main_window.rs  meson.build  mod.rs  page_adoc.rs  page_asciibox.rs  page_flowchart.rs  page_mermaid.rs  page_svgbob.rs  page_table.rs  perferences.rs  preference_window.rs  preferences.rs  shortcuts_window.rs  theme_selector.rs  theme_switcher.rs
src/gui/widget/: meson.build  mod.rs  theme_switcher.rs
src/gui/window/: asciibox_window.rs  mod.rs
src/task_row/: imp.rs
src/utils/: calurator.rs  files.rs  g_dialog.rs  g_resource.rs  mod.rs
src/window/: imp.rs  mod.rs
test/: pkg_build_test.sh
