[package]
name = "asciibox"
version = "1.0.0"
authors = ["nobodygx"]
edition = "2024"
homepage = "https://github.com/nobodygx/asciibox"
repository = "https://github.com/nobodygx/asciibox"

[dependencies]
adw = { version = "0.9.1", package = "libadwaita", features = ["v1_5"] }
ascii-dag = "0.9.1"
base64 = "0.22.1"
env_logger = "0.11.10"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
grid = "1.0.0"
gtk = { version = "0.11.1", package = "gtk4", features = ["v4_12"] }
homedir = "0.3.5"
indexmap = "2.13.0"
log = "0.4.29"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
sourceview = {package = "sourceview5", version = "0.11.0", features = ["gtk_v4_12"] }
svgbob = "0.7.6"
toml = "0.9.8"
webkit = {package = "webkit6", version = "0.6.1"}


[build-dependencies]
glib-build-tools = "0.22.0"
